# API_project_130pm

./: .gitignore  README.md  SBIN.csv  api.ipynb  app.py  godrejind.csv  main.py  pyproject.toml  requirements.txt  utils.py
